--- a/latex-sigcomm18-master/body.tex
+++ b/latex-sigcomm18-master/body.tex
@@ -8,23 +8,22 @@
 \end{figure}
 
 \section{Related Work}
-\blindtext
+%\blindtext
 
 And we need some citation here\cite{floyd1993random, stoica2001chord}
 
-\Blindtext
+%\Blindtext
 
 \section{System Design}
 
 \subsection{The First Layer}
-\Blindtext
 
 \subsection{The Second Layer}
-\Blindtext
+%\Blindtext
 
 \section{Evaluation}
-\Blindtext
+%\Blindtext
 
 \section{Conclusion}
-\blindtext
+%\blindtext
 
