--- a/latex-sigcomm18-master/paper.tex
+++ b/latex-sigcomm18-master/paper.tex
@@ -32,7 +32,7 @@
 
 
 \begin{document}
-\title{A \LaTeX\ Template for SIGCOMM 18}
+\title{A Study into the Effects of Topology Switching for Scalable Client-Server Distributed Applications}
 
 %\titlenote{Produces the permission block, and copyright information}
 %\subtitle{Extended Abstract}
@@ -54,7 +54,6 @@
 \renewcommand{\shortauthors}{X.et al.}
 
 \begin{abstract}
-    \blindtext
 \end{abstract}
 
 \maketitle
