--- a/latex-sigcomm18-master/body.tex
+++ b/latex-sigcomm18-master/body.tex
@@ -19,7 +19,7 @@
 \begin{figure}[tp]
 \centering
 \includegraphics[width=0.5 \textwidth]{figures/switches}
-\caption{\blindtext}
+\caption{hye}
 \end{figure}
 
 \section{Related Work}
@@ -42,15 +42,21 @@ And we need some citation here\cite{floyd1993random, stoica2001chord}
 \begin{figure}[tp]
 \centering
 \includegraphics[width=0.5 \textwidth]{figures/AGIS_ORIG}
-\caption{\blindtext}
+\caption{hye}
 \end{figure}
 
-\subsection{The First Layer}
+\subsection{Simulations}
 
-\subsection{The Second Layer}
-%\Blindtext
+\subsection{One Server One Client Scenario}
 
-\section{Evaluation}
+\subsection{One Server Multi-Client Scenario}
+
+For the first simulation, we consider a 4-client 1-server scenario; each is randomly assigned a geographic location, as shown in FIGURE 3. We first conducted 10 throughput tests, which yielded an average time of BLANK for each client for all of the client's queries to be satisfied by the server and returned to the client nodes. 
+
+\subsection{Multi-Server Multi-Client Scenario}
+
+
+\section{Discussion}
 %\Blindtext
 
 \section{Conclusion}
