--- a/latex-sigcomm18-master/paper.tex
+++ b/latex-sigcomm18-master/paper.tex
@@ -37,8 +37,8 @@
 %\titlenote{Produces the permission block, and copyright information}
 %\subtitle{Extended Abstract}
 
-\author{Paper \# XXX, XXX pages}
-% \author{Firstname Lastname}
+\author{}
+ \author{Alexander Summers}
 % \authornote{Note}
 % \orcid{1234-5678-9012}
 % \affiliation{%
@@ -51,7 +51,7 @@
 % \email{email@domain.com}
 
 % The default list of authors is too long for headers}
-\renewcommand{\shortauthors}{X.et al.}
+\renewcommand{\shortauthors}{Summers}
 
 \begin{abstract}
 \end{abstract}
