--- a/latex-sigcomm18-master/reference.bib
+++ b/latex-sigcomm18-master/reference.bib
@@ -1,22 +1,69 @@
-@article{floyd1993random,
-  title={Random early detection gateways for congestion avoidance},
-  author={Floyd, Sally and Jacobson, Van},
-  journal={IEEE/ACM Transactions on Networking (ToN)},
-  volume={1},
-  number={4},
-  pages={397--413},
-  year={1993},
-  publisher={IEEE Press}
+
+@misc{alex21topology,
+  author={Alex},
+  title={{Dyanmicly-Changing-Node-Topology}},
+  year={2023},
+  howpublished={\url{https://github.com/AyeitsAlex21/Dyanmicly-Changing-Node-Topology}}
 }
 
-@article{stoica2001chord,
-  title={Chord: A scalable peer-to-peer lookup service for internet applications},
-  author={Stoica, Ion and Morris, Robert and Karger, David and Kaashoek, M Frans and Balakrishnan, Hari},
-  journal={ACM SIGCOMM Computer Communication Review},
-  volume={31},
-  number={4},
-  pages={149--160},
-  year={2001},
-  publisher={ACM}
+@misc{lovasoaTPCHsqlite,
+  author={Lovasoa},
+  title={{TPCH-sqlite}},
+  year={2017},
+  howpublished={\url{https://github.com/lovasoa/TPCH-sqlite}}
 }
 
+@article{wen2018dynamic,
+  title = {Dynamic reconfiguration of distribution networks considering the real-time topology variation},
+  author = {Wen, Juan and Tan, Yanghong and Jiang, Lin and Lei, Kejun},
+  journal = {IET Generation, Transmission \& Distribution},
+  volume = {12},
+  number = {9},
+  pages = {2240-2248},
+  year = {2018},
+  doi = {10.1049/iet-gtd.2017.1304},
+  url = {https://doi.org/10.1049/iet-gtd.2017.1304},
+}
+
+@misc{xue2023optical,
+      title={Optical Switching Data Center Networks: Understanding Techniques and Challenges}, 
+      author={Xuwei Xue and Shaojuan Zhang and Bingli Guo and Wei Ji and Rui Yin and Bin Chen and Shanguo Huang},
+      year={2023},
+      eprint={2302.05298},
+      archivePrefix={arXiv},
+      primaryClass={cs.NI}
+}
+
+@inproceedings{singla2012jellyfish,
+  title = {Jellyfish: Networking Data Centers Randomly},
+  author = {Singla, Ankit and Hong, Chi-Yao and Popa, Lucian and Godfrey, P. Brighten},
+  booktitle = {Proceedings of the 9th USENIX Conference on Networked Systems Design and Implementation},
+  year = {2012},
+  url = {https://www.usenix.org/conference/nsdi12/technical-sessions/presentation/singla},
+}
+
+@article{hall_survey_2021,
+  title={Jellyfish: Networking Data Centers Randomly},
+  author={Singla, Ankit and Hong, Chi-Yao and Popa, Lucian and Godfrey, P. Brighten},
+  booktitle={Proceedings of the 9th USENIX Conference on Networked Systems Design and Implementation},
+  year={2012},
+  publisher={USENIX Association},
+  address={San Jose, CA},
+  url={https://www.usenix.org/conference/nsdi12/technical-sessions/presentation/singla},
+  pages={1-14}
+}
+
+@book{kurose2021computer,
+  title = {Computer Networking: A Top-Down Approach},
+  author = {Kurose, James F. and Ross, Keith W.},
+  year = {2021},
+  edition = {8th},
+  publisher = {Pearson},
+}
+
+@book{nandi2022optical,
+  title = {Optical Switching: Device Technology and Applications in Networks},
+  author = {Nandi, Dalia and Nandi, Sandip and Sarkar, Angsuman and Sarkar, Chandan Kumar},
+  year = {2022},
+  publisher = {Publisher},
+}
